2005-02-10  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (linux_renice_process): Optimize priority
	tracking between Linux and RTAI.

2005-02-10  Philippe Gerum  <rpm@localhost>

	* nucleus/pod.c, nucleus/sync.c, nucleus/shadow.c: Rework the way
	Linux priorities are updated on-the-fly when the nucleus changes
	them for shadow threads. The new approach is based on a lazy
	update upon return from xnshaow_relax(), since sending priority
	update requests to Linux makes no sense while the affected task is
	running in primary mode.

2005-02-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/cond.h, skins/rtai/heap.h: Remove bugous forward
	declarations.

	* skins/rtai/sem.c (rt_sem_broadcast): Zero the resource count.

	* skins/rtai/task.h (thread2rtask): Convert to inline function to
	prevent spurious evaluation side-effects due to multiple macro arg
	expansion. Such bug affected condvar and mutex supports.

2005-02-03  Max Krasnyansky <maxk@qualcomm.com>

	* configure.in: Fix GCC tuning flags determination script.

2005-02-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c: Stop page-aligning virtual addresses of
	shmbases; this is useless.

2005-02-02  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_intr_wait): Fix pending count
	handling and return it to the caller as a success value.

	* include/nucleus/intr.h: Discard unused status field.

2005-02-01  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_set_linux_task_priority): Limit
	high priority value.

2005-01-28  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (engage_irq_shield, disengage_irq_shield): Add
	back hw masking when operating the shield. This prevents a race
	with the callback request code which may occur under high
	mode migration rate. Oops.

	* nucleus/fusion.c: Add pthread_exit_rt() to unmap a shadow thread
	from a regular Linux task without destroying the latter.

	* nucleus/shadow.c (xnshadow_unmap): Handle differently unmapping