@@ -1,3 +1,8 @@
+2005-02-11  Philippe Gerum  <rpm@xenomai.org>
+
+	* nucleus/thread.c (xnthread_init): Provide default thread name
+	when unspecified.
+
 2005-02-10  Philippe Gerum  <rpm@xenomai.org>
 
 	* nucleus/shadow.c (linux_renice_process): Optimize priority
